# PMSR

./: .gitignore  README Bjoern  youbot_testscene.ttt
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
catkin_ws/src/: close.sh  forward.sh  open.sh
catkin_ws/src/cluster_pointcloud/: CMakeLists.txt  package.xml
catkin_ws/src/cluster_pointcloud/launch/: object_cluster.launch
catkin_ws/src/cluster_pointcloud/src/: cluster_pointcloud.cpp  find_truck.cpp  get_barrels.srv
catkin_ws/src/cluster_pointcloud/srv/: get_barrels.srv  get_truck.srv
catkin_ws/src/controller/: CMakeLists.txt  package.xml
catkin_ws/src/controller/cmake/: decision_making_parsing.cmake
catkin_ws/src/controller/launch/: fsm_youbot.launch
catkin_ws/src/laser_to_pointcloud/: CMakeLists.txt  package.xml
catkin_ws/src/navigation_test/: CMakeLists.txt  package.xml
catkin_ws/src/opencv_detect_squares/: CMakeLists.txt  package.xml
catkin_ws/src/rts_launch/: CMakeLists.txt  package.xml
catkin_ws/src/rts_launch/cfg/: amcl_params.yaml  base_global_planner_params.yaml  base_local_planner_params_dwa.yaml  costmap_common_params.yaml  global_costmap_params.yaml  gmapping_params.yaml  local_costmap_params.yaml  move_base_params.yaml
catkin_ws/src/rts_launch/launch/: all.launch  base_system.launch  gmapping.launch  navigation_mapping.launch  navigation_navigating.launch
catkin_ws/src/rts_launch/maps/: floor12.2.pgm  floor12.2.yaml  floor12.pgm  floor12.xcf  floor12.yaml  youbot.pgm  youbot.yaml
catkin_ws/src/youbot_2dnav/: CMakeLists.txt  move camera.sh  package.xml
(+62 files in other folders)
